--- a/app/src/main/res/drawable/bg_my_message.xml
+++ b/app/src/main/res/drawable/bg_my_message.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:right="12dp">
+    <item>
         <shape android:shape="rectangle">
             <solid android:color="?attr/attrBackgroundMyMessage" />
             <corners android:radius="@dimen/small_radius" />
