--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,6 +12,7 @@
     <dimen name="large_padding">24dp</dimen>
     <dimen name="normal_padding">16dp</dimen>
     <dimen name="small_padding">8dp</dimen>
+    <dimen name="l_small_padding">12dp</dimen>
     <dimen name="x_small_padding">4dp</dimen>
     <dimen name="x_small_margin">4dp</dimen>
     <dimen name="small_margin">8dp</dimen>
