--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1222,7 +1222,7 @@
         <item name="android:minWidth">110dp</item>
         <item name="android:paddingStart">@dimen/small_padding</item>
         <item name="android:paddingEnd">@dimen/small_padding</item>
-        <item name="android:paddingTop">@dimen/small_padding</item>
+        <item name="android:paddingTop">@dimen/l_small_padding</item>
         <item name="android:paddingBottom">@dimen/x_small_padding</item>
     </style>
 
