--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -39,17 +39,8 @@
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <ImageButton
-                    android:id="@+id/imageButton_subscription_start_icon"
-                    style="@style/OptionEndIcon"
-                    android:layout_marginStart="@dimen/normal_margin"
-                    android:tint="@color/white"
-                    app:layout_constraintBottom_toBottomOf="@+id/textView_message_subscription"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/textView_message_subscription"
-                    app:srcCompat="@drawable/anim_cancel_edit" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:visibility="visible">
 
                 <TextView
                     android:id="@+id/textView_message_subscription"
@@ -61,9 +52,9 @@
                     android:layout_marginBottom="@dimen/small_margin"
                     android:textColor="@color/white"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/imageButton_subscription_start_icon"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:text="@string/text_expired_subscription" />
+                    tools:text="@string/text_subscription_expired" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
