--- a/app/src/main/res/values-pt/subscription.xml
+++ b/app/src/main/res/values-pt/subscription.xml
@@ -21,4 +21,12 @@
     <string name="text_unsubscribed_desc">Lembre-se que você pode se inscrever para um outro pacote que se adapte às suas necessidades a qualquer momento.</string>
     <string name="text_finalize">Finalizar</string>
     <string name="text_error_unsubscribe">Um erro cancelar a sua assinatura, por favor tente mais tarde ocorreu.</string>
+    <string name="text_subscription_monthly">Por mês</string>
+    <string name="text_subscription_semiannual">Semestral</string>
+    <string name="text_subscription_yearly">Anual</string>
+    <string name="text_purchase">Comprar %1$s (%2$s)</string>
+    <string name="text_subscription_successfully">Assinatura com sucesso.</string>
+    <string name="text_subscription_already_owned">Você já tem este plano ativo no momento.</string>
+    <string name="text_subscription_error">Ocorreu um erro. Tente mais tarde.</string>
+    <string name="text_subscription_expired">Sua Assinatura expirada, você só vai receber mensagens.</string>
 </resources>
