--- a/app/src/main/res/values-de/subscription.xml
+++ b/app/src/main/res/values-de/subscription.xml
@@ -27,6 +27,7 @@
     <string name="text_purchase">Kaufen %1$s (%2$s)</string>
     <string name="text_subscription_successfully">Abonnement erfolgreich.</string>
     <string name="text_subscription_already_owned">Sie haben diesen Plan bereits aktiv.</string>
+    <string name="text_operation_cancelled">Vorgang abgebrochen.</string>
     <string name="text_subscription_error">Ein Fehler ist aufgetreten. Versuchen Sie es später noch einmal.</string>
     <string name="text_subscription_expired">Ihr abgelaufenes Abonnement, Sie werden nur Nachrichten empfangen.</string>
 </resources>
