--- a/app/src/main/res/values-fr/subscription.xml
+++ b/app/src/main/res/values-fr/subscription.xml
@@ -27,6 +27,7 @@
     <string name="text_purchase">Acheter %1$s (%2$s)</string>
     <string name="text_subscription_successfully">Abonnement réussi.</string>
     <string name="text_subscription_already_owned">Vous disposez déjà de ce plan actuellement actif.</string>
+    <string name="text_operation_cancelled">Opération annulée.</string>
     <string name="text_subscription_error">Une erreur est survenue! Réessayez plus tard.</string>
     <string name="text_subscription_expired">Votre expirés d\'abonnement, vous ne recevrez des messages.</string>
 </resources>
