--- a/app/src/main/res/layout/preview_media_fragment.xml
+++ b/app/src/main/res/layout/preview_media_fragment.xml
@@ -49,7 +49,8 @@
                 android:layout_height="64dp"
                 android:layout_gravity="center"
                 android:layout_marginStart="@dimen/x_small_margin"
-                android:background="@drawable/bg_play_attachment_preview"
+                android:padding="@dimen/x_small_padding"
+                android:background="@drawable/bg_rounded_icon_show"
                 android:clickable="true"
                 android:focusable="true"
                 android:scaleType="fitCenter"
@@ -102,13 +103,15 @@
                 style="@style/BodyTextView.White"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:ellipsize="marquee"
+                android:ellipsize="end"
                 android:padding="@dimen/normal_padding"
-                android:text="@{message.message.body}"
+                android:maxLines="4"
+                app:setTextPreview="@{message.message.body}"
                 android:textAlignment="center"
                 app:layout_constraintBottom_toTopOf="@id/container_seekbar"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 tools:text="@tools:sample/lorem[4]" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -125,9 +128,9 @@
                     android:id="@+id/seekbar"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/normal_margin"
                     android:layout_marginEnd="@dimen/small_margin"
-                    android:layout_marginBottom="@dimen/x_large_margin"
+                    android:layout_marginTop="@dimen/large_margin"
+                    android:layout_marginBottom="@dimen/large_margin"
                     android:layout_weight="1"
                     android:max="100"
                     app:layout_constraintBottom_toBottomOf="parent"
