--- a/app/src/main/res/layout/blocked_contacts_item.xml
+++ b/app/src/main/res/layout/blocked_contacts_item.xml
@@ -19,13 +19,14 @@
         android:layout_height="wrap_content"
         android:background="@drawable/bg_home_item"
         android:foreground="?attr/selectableItemBackground"
+        android:onClick="@{() -> clickListener.onClick(contact)}"
         android:padding="@dimen/normal_padding"
-        android:onClick="@{() -> clickListener.onClick(contact)}">
+        app:layout_constraintVertical_chainStyle="packed">
 
         <ImageView
             android:id="@+id/imageView_user_image"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
             android:background="@drawable/border_avatar_contact"
             app:avatar="@{contact}"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -41,12 +42,13 @@
             android:layout_marginStart="@dimen/normal_margin"
             android:ellipsize="end"
             android:lines="1"
-            app:name="@{contact}"
             app:layout_constraintBottom_toTopOf="@+id/textView_user_nickname"
             app:layout_constraintEnd_toStartOf="@id/button_more"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@id/imageView_user_image"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed"
+            app:name="@{contact}"
             tools:text="@tools:sample/full_names" />
 
         <TextView
@@ -54,22 +56,21 @@
             style="@style/BodyTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/x_small_margin"
             android:ellipsize="end"
             android:lines="1"
-            app:nickname="@{contact}"
             android:textColor="?attr/attrColorButtonTint"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/button_more"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="@id/textView_user_name"
             app:layout_constraintTop_toBottomOf="@+id/textView_user_name"
+            app:nickname="@{contact}"
             tools:text="@tools:sample/first_names" />
 
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/button_more"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:tint="@color/colorSecondaryDark"
             app:layout_constraintBottom_toBottomOf="parent"
