--- a/app/src/main/res/drawable/bg_text_view_notification_message.xml
+++ b/app/src/main/res/drawable/bg_text_view_notification_message.xml
@@ -2,9 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid android:color="#9FE554" />
+    <solid android:color="@color/buttonTint" />
 
-    <size
-        android:height="15dp"
-        android:width="15dp" />
 </shape>
