Al realizar el cambio de estado para los idiomas frances, alemán, italiano y portugués se visualiza que el mensaje tiene la misma totalidad del fondo de la pantalla lo que hace complicado observar el mensaje exitoso. En la opción de ajustes de apariencia, en fondo de conversación, al realizar el cambio con una fotografía tomada, no se visualiza claramente el mensaje de fondo se aplicó correctamente. En la opción de ajustes de seguridad, al realizar el cambio de PIN, no se visualiza con claridad el mensaje de actualizado satisfactoriamente. Al realizar el cambio de estado para los idiomas frances, alemán, italiano y portugués se visualiza que el mensaje tiene la misma totalidad del fondo de la pantalla lo que hace complicado observar el mensaje exitoso. Revisar estados en portugues. Al tener una lista de audios pendientes por escuchar, se reproduce el primero y sin dejarlo terminar se le da "Play" al siguiente. Se evidencia que no coloca ese audio como visto. Cuando hay varias notas seguidas y se hace scroll otro viewholder toma el progreso como si ese fuera el que se estuviera reproduciendo pero en realidad no.

--- a/app/src/main/res/values-pt/status.xml
+++ b/app/src/main/res/values-pt/status.xml
@@ -4,7 +4,7 @@
     <string name="text_status_hint">Digite um estado</string>
     <string name="text_select_a_status">Selecione um estado</string>
     <string name="text_status_available">Disponível</string>
-    <string name="text_status_busy">Disponible</string>
+    <string name="text_status_busy">Ocupado</string>
     <string name="text_status_in_meeting">Em reunião</string>
     <string name="text_status_only_messages">Apenas mensagens</string>
     <string name="text_status_sleeping">Adormecido</string>
