--- a/app/src/main/res/drawable/bd_rounded_toast.xml
+++ b/app/src/main/res/drawable/bd_rounded_toast.xml
@@ -2,4 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <solid android:color="#EECCCCCC" />
     <corners android:radius="100dp" />
+    <padding android:bottom="@dimen/small_padding" android:top="@dimen/small_padding"
+             android:left="@dimen/small_padding" android:right="@dimen/small_padding"/>
 </shape>
